Creado mediante Colaboratory

--- a/Ejercicio_2.ipynb
+++ b/Ejercicio_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+WneLrkoYFsJ8470X4xUQ",
+      "authorship_tag": "ABX9TyP+D45S+S0kyuOWo/KlKxXv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,9 @@
       "cell_type": "markdown",
       "source": [
         "# Ejercicio 2\n",
-        "## Cargar la base"
+        "## Cargar la base\n",
+        "\n",
+        "Para este segundo ejercicio se usa una base de libros disponible en: https://www.kaggle.com/datasets/jealousleopard/goodreadsbooks"
       ],
       "metadata": {
         "id": "Oc6e7HCgBSYq"
