--- a/Clase_1_Regresión_lineal.ipynb
+++ b/Clase_1_Regresión_lineal.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMi+lfVBg0D2TzGlmsrTM/u",
+      "authorship_tag": "ABX9TyOdLPc3d8m+KmURinvRGW/j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -588,6 +588,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Interpretación de los coeficientes\n",
+        "\n",
+        "AGREGAR\n",
+        "\n",
+        "\n",
         "### Capacidades explicativas y predictivas\n",
         "\n",
         "La anterior estimación nos permite pensar en dos aspectos del modelo:\n",
@@ -1168,6 +1173,10 @@
         "Notemos que en este caso, las estimaciones no están todas sobre la misma curva. Sobre todo en el medio, los puntos aparecen a distintas alturas para iguales valores de $x$. Justamente, esto se debe a que entran en juego las otras variables no disponibles en el gráfico (antigüedad y superficie del lote). Distintos valores de estas dos variables proveen distintas estimaciones y por lo tanto, tienen una \"coordenada y\" diferente.\n",
         "\n",
         "Por otro lado, vale remarcar que esta variabilidad de las estimaciones también explica el incremento de $R^2$ con este modelo, ya que al tener más factores en cuenta, las estimaciones se pueden adaptar más a la heterogeneidad de los datos.\n",
+        "\n",
+        "### Interpretación de los coeficientes\n",
+        "\n",
+        "AGREGAR\n",
         "\n",
         "## Variables categóricas\n",
         "\n",
